top0 overflow fixed

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -10,10 +10,12 @@ body {
 
 #unity-container {
     position: fixed;
+    top: 0;
     padding: 0;
     margin: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #unity-container.unity-desktop {
